examples/infra/modules/echo-app/ingress/traefik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-app
  namespace: ${namespace}
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "echo-app.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echo-app
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
